# vicarian

./: .release-plz.toml  CHANGELOG.md  CONFIGURATION.md  Cargo.toml  METRICS.md  README.md  SECURITY.md
.config/: nextest.toml
.github/workflows/: release-binaries.yml  release-plz.yml  tests.yml
docs/website/: index.html
examples/: vicarian-dns01.corn  vicarian-http01.corn  vicarian-listen-interface.corn  vicarian-metrics.corn  vicarian-tls-files.corn  vicarian-wildcard-tls.corn
src/: errors.rs  main.rs
src/certificates/: acme.rs  external.rs  handler.rs  host.rs  mod.rs  store.rs  tests.rs  watcher.rs
src/config/: cli.rs  mod.rs  tests.rs
src/mdns/: mod.rs
src/metrics/: mod.rs
src/proxy/: cleartext.rs  mod.rs  router.rs  services.rs  static.rs  tests.rs
supply-chain/: audits.toml  config.toml
tests/data/certs/: www.example.com.crt  www.example.com.key
tests/data/config/: backend_context.corn  component-backend.corn  example_com_auth.corn  example_com_metrics.corn  example_com_simple.corn  example_com_static.corn  example_com_static_auth.corn  example_com_vhosts.corn  example_com_wildcard.corn  localhost_simple.corn  module-backend.corn  no-leading-slash.corn
tests/data/static/: index.html  large.html
tests/data/static/css/: style.css
tests/data/static/js/: app.js
tests/data/static/subdir/: page.html
tests/integration/: main.rs  static_files.rs  tests.rs  websockets.rs
tests/utils/: certs.rs  mod.rs  proxy.rs
