[package]
name = "vicarian"
description = "Vicarian is a reverse proxy server with ACME support"
version = "0.2.1"
edition = "2024"

authors = ["Steve Smith <tarkasteve@gmail.com>"]
homepage = "https://github.com/tarka/vicarian"
repository = "https://github.com/tarka/vicarian"
readme = "README.md"

keywords = ["proxy", "https", "reverse-proxy", "pingora"]
categories = ["web-programming::http-server", "network-programming"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
boring = "4.21.1"
camino = { version = "1.2.2", features = ["serde1"] }
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
clap = { version = "4.5.54", features = ["derive"] }
dnsclient = "0.2.0"
fastrand = "2.3.0"
futures = "0.3.31"
http = "1.4.0"
http-serde = "2.1.1"
instant-acme = { version = "0.8.4", features = ["time"] }

itertools = "0.14.0"
libcorn = "0.10.1"
nix = { path = "/home/ssmith/programming/nix-rust/", features = ["net", "resource"] }
notify = { version = "8.2.0", features = ["crossbeam-channel"] }
notify-debouncer-full = { version = "0.7.0", features = ["crossbeam-channel"] }
papaya = "0.2.3"
path-tree = "0.8.3"
phf = { version = "0.13.1", features = ["phf_macros"] }
phf_macros = "0.13.1"
pingora-boringssl = "0.6.0"
pingora-core = { version = "0.6.0", features = ["boringssl"] }
pingora-http = "0.6.0"
pingora-proxy = "0.6.0"
psl = "2.1.182"
rustls = "0.23.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_default_utils = { version = "0.3.1", features = ["inline"] }
serde_json = "1.0.149"
strum_macros = "0.27.2"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt", "sync"] }
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
zone-update = { version = "0.11.0", features = ["async"] }

[features]
default = ["integration_tests"]
integration_tests = []

[dev-dependencies]
ctor = "0.6.3"
fslock = "0.2.1"
nix = { path = "/home/ssmith/programming/nix-rust/", features = ["process", "signal", "term"] }
pem = "3.0.6"
rcgen = { version = "0.14.7", features = ["x509-parser"] }
reqwest = { version = "0.13.1", default-features = false, features = ["http2", "rustls"] }
serial_test = "3.3.1"
tempfile = "3.24.0"
test-context = "0.5.4"
test-log = { version = "0.2.19", features = ["trace"] }
time = { version = "0.3.46", features = ["macros"] }
tokio = { version = "1.49.0", features = ["fs"] }
wiremock = "0.6.5"

[profile.release]
strip = true
overflow-checks = true
lto = "fat"
codegen-units = 1

[lints.clippy]
unused_unit = "allow"

[package.metadata.binstall]
bin-dir = "{ name }-v{ version }-{ target }/bin/{ bin }{ binary-ext }"

[package.metadata.bacon]
apply_gitignore = false
watch = ["vicarian.corn"]
