[package]
name = "vicarian"
description = "Vicarian is a reverse proxy server with ACME support"
version = "0.2.7"
edition = "2024"

authors = ["Steve Smith <tarkasteve@gmail.com>"]
homepage = "https://github.com/tarka/vicarian"
repository = "https://github.com/tarka/vicarian"
readme = "README.md"

keywords = ["proxy", "https", "reverse-proxy", "pingora"]
categories = ["web-programming::http-server", "network-programming"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.104"
async-trait = "0.1.91"
bytes = "1.12.1"
camino = { version = "1.2.4", features = ["serde1"] }
clap = { version = "4.6.2", features = ["derive"] }
dnsclient = "0.2.0"
fastrand = "2.4.1"
futures = "0.3.33"
futures-lite = "2.6.1"
http = "1.4.2"
http-body-util = "0.1.4"
http-serde = "2.1.1"
hyper = "1.10.1"
instant-acme = { version = "0.8.5", features = ["time"] }

itertools = "0.15.0"
libcorn = "0.10.1"
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false, features = ["tokio", "tracing"] }
nix = { version = "0.31.3", features = ["net", "resource"] }
notify = { version = "8.2.0", features = ["crossbeam-channel"] }
notify-debouncer-full = { version = "0.7.0", features = ["crossbeam-channel"] }
papaya = "0.2.4"
phf = { version = "0.14.0", features = ["phf_macros"] }
phf_macros = "0.14.0"
pingora-boringssl = "0.8.1"
pingora-core = { version = "0.8.1", features = ["boringssl"] }
pingora-http = "0.8.1"
pingora-proxy = "0.8.1"
psl = "2.1.219"
rustls = "0.23.42"
serde = { version = "1.0.229", features = ["derive"] }
serde_default_utils = { version = "0.3.1", features = ["inline"] }
serde_json = "1.0.150"
static-web-server = {
    # Pre-V3; update when upstream releases
    path = "./vendor/static-web-server",
    default-features = false,
    features = ["directory-listing", "fallback-page"]
}
strum_macros = "0.28.0"
thiserror = "2.0.19"
time = { version = "0.3.53", features = ["local-offset"] }
tokio = { version = "1.53.0", features = ["macros", "rt", "sync", "fs"] }
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
x509-parser = "0.18.1"
zone-update = { version = "0.11.0", features = ["async"] }

[features]
default = ["integration_tests"]
integration_tests = []

[dev-dependencies]
fslock = "0.2.1"
nix = { version = "0.31.3", features = ["process", "signal", "term"] }
pem = "3.0.6"
rcgen = { version = "0.14.8", features = ["x509-parser"] }
reqwest = { version = "0.13.4", default-features = false, features = ["http2", "rustls"] }
serial_test = "3.5.0"
tempfile = "3.27.0"
test-log = { version = "0.2.21", features = ["trace"] }
time = { version = "0.3.53", features = ["macros"] }
tokio = { version = "1.53.0", features = ["fs"] }
tokio-tungstenite = { version = "0.30.0", features = ["rustls", "rustls-tls-webpki-roots", "tokio-rustls"] }
wiremock = "0.6.5"
wiremocket = "0.3.2"

[profile.release]
strip = true
overflow-checks = true
lto = "fat"
codegen-units = 1

[lints.clippy]
unused_unit = "allow"

[package.metadata.binstall]
bin-dir = "{ name }-v{ version }-{ target }/bin/{ bin }{ binary-ext }"

[package.metadata.bacon]
apply_gitignore = false
watch = ["vicarian.corn"]
